[Changes for 0.91 - December 11, 2005]

* Bug Fixes

    - Applied Alan Stewart's patch which fixes @ARGV pollution in
      daughter programs. See also 
      http://www.nntp.perl.org/group/perl.par/2152

[Changes for 0.90 - November 25, 2005]

* Bug Fixes

    - When compiling with static libperl, myldr/ may fail "make"
      due to sha1.c not generated properly.

    - Pod stripping could fail on __DATA__ sections for files
      with CRLF line endings.

    - The documentation erroneously referred to the PAR_TEMP
      environment variable, whereas it should be PAR_GLOBAL_TEMP.

    - Compilation fixes for MinGW/MSYS.

[Changes for 0.89 - June 10, 2005]

* Bug Fixes

    - Stop static.c from pulling in Perl header files, otherwise
      parl.exe ends up depending on the Perl DLL on Win32 when
      Perl is built without PERL_IMPLICIT_SYS.

    - With *nix and File::Path 1.06, par.pl's avoidance of loading
      Cwd.pm caused syntax errors.

[Changes for 0.88 - June 7, 2005]

* Bug Fixes

    - Extracted .pl files should be loadable via the coderef-in-@INC too,
      just like .pm files and autosplit files.  This makes PAR work with
      Perl 5.8.7 on Win32.

    - Fix the build with GCC 4.0.

    - If $ENV{PWD} is not defined, fallback to use `pwd` to obtain the
      working directory for invoking.

[Changes for 0.87 - January 31, 2005]

* Bug Fixes

    - On Win32, some versions of File::Spec::Win32 contains explicit
      "use Cwd;" lines, which renders parl.exe unusable.

    - Executable made by "pp" may fail when invoked as "./a.out" or
      "../a.out", due to incorrect PWD handling logic.

[Changes for 0.86 - December 11, 2004]

* New Features

    - New "pp -z" (--compress) option to set compression level (0-9).

    - New "pp -T" (--tempcache) option to override the per-executable
      directory name; it defaults to a hash of the executable, computed at
      compile time.  This makes startup much faster for large executables.
